根据阿里代码规约优化代码